# web

./: .env.example  .gitignore  .pre-commit-config.yaml  .run_remote.exp  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.js  gen_soc_v3.js  generate-blog.cjs  generate-docs.cjs  generate_sitemaps.py  index.html  koreshield_threat_logs.csv  nginx.conf  package-lock.json  package.json  sitemap_index.xml  update_remote_env.py  vite.config.ts  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
koreshield/: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  benchmark_detection.py  benchmark_rag_detection.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup-railway.sh  setup.py  start.sh  verification_teams.py
koreshield-python-sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
koreshield-python-sdk/examples/: RAG_EXAMPLES.md  async_usage.py  basic_usage.py  batch_processing.py  deepseek_integration.py  fastapi_integration.py  framework_integrations.py  hubspot_rag.py  langchain_integration.py  langchain_rag.py  salesforce_rag.py  streaming_scan.py  zendesk_rag.py
koreshield-python-sdk/examples/demo_app/: app.py  requirements.txt
koreshield-python-sdk/koreshield-0.3.8/: LICENSE  MANIFEST.in  pyproject.toml
koreshield-python-sdk/koreshield-0.3.8/examples/: basic_rag_scan.py  basic_usage.py  deepseek_integration.py  fastapi_integration.py  framework_integrations.py  hubspot_rag.py  langchain_rag.py  salesforce_rag.py  zendesk_rag.py
koreshield-python-sdk/koreshield-0.3.8/src/koreshield_sdk/: __init__.py  async_client.py  local_security.py  types.py
koreshield-python-sdk/koreshield-0.3.8/tests/: test_client.py  test_integrations.py
koreshield-python-sdk/src/koreshield_sdk/: __init__.py  async_client.py  client.py  exceptions.py  local_security.py  types.py
koreshield-python-sdk/src/koreshield_sdk/integrations/: __init__.py  frameworks.py  langchain.py
koreshield-python-sdk/tests/: test_async_client.py  test_client.py  test_integrations.py  test_rag_sdk.py
koreshield/alembic/: README.md  env.py
koreshield/alembic/versions/: 001_initial.py  002_add_users_table.py  003_add_api_keys_table.py  118b09c33ba4_add_request_logs.py  4a9a3d3f7f12_add_rag_scans.py  6f7b3a0a3e2d_merge_heads.py  96bbad2830a7_add_team_and_teammember.py  a1b2c3d4e5f6_tenant_row_level_security.py  a8b9c0d1e2f3_add_oauth_fields_to_users.py  ab12c3d4ef56_add_billing_tables.py  b2c3d4e5f6a7_merge_oauth_and_rls_heads.py  c3d4e5f6a7b8_add_alerts_and_rules_tables.py  c7d485155c51_add_report_tables.py  d1e2f3a4b5c6_add_team_invites_and_shared_dashboards.py  e5f6a7b8c9d0_merge_billing_and_team_invites_heads.py  f1a2b3c4d5e6_harden_team_invites_and_shared_dashboards.py
koreshield/config/: config.example.yaml  railway-config.yaml
koreshield/config/threat-intel/: known_malicious_patterns.json
koreshield/data/: audit_ledger.jsonl  operational_state.json
koreshield/data/lists/: allowlist.json  blocklist.json
koreshield/docker/: Dockerfile  docker-compose.yml
koreshield/docs/: AGENT_SHIELD_INTEGRATION_STRATEGY.md  DETECTION_PATTERNS.md  TO_BE_CONSIDERED_REMAINING_MAP.md
koreshield/examples/: README.md  advanced_usage.py  basic_usage.py  demo_blocked_path.py  demo_happy_path.py  hubspot_rag_integration.py  salesforce_rag_integration.py  zendesk_rag_integration.py
koreshield/examples/django/: README.md  middleware.py
koreshield/examples/fastapi/: app.py
koreshield/examples/flask/: README.md  app.py
koreshield/examples/llamaindex/: README.md
koreshield/monitoring/: README.md
koreshield/monitoring/grafana/: koreshield-dashboard.json
koreshield/monitoring/prometheus/: prometheus.yml
koreshield/research/: README.md
koreshield/research/case-studies/: README.md
koreshield/research/experiments/crm-benchmarks/: README.md  hubspot_synthetic_dataset.json  salesforce_synthetic_dataset.json
koreshield/research/ml/: README.md
koreshield/scripts/: benchmark_crm_datasets.py  export_threat_logs.py  provision_demo_tenant.py  status_updater.py  test_alerts.py  verify_installation.py
koreshield/src/koreshield/: __init__.py  cli.py  config.py  database.py  detector.py  list_manager.py  logger.py  main.py  monitoring.py  normalization.py  oauth_handler.py  policy.py  proxy.py  rag_detector.py  rag_taxonomy.py  rule_engine.py  runtime_governance.py  sanitizer.py  semantic_scorer.py  tenant_api.py  tenant_database.py  tenant_middleware.py  tenant_models.py  tenant_models_backup.py  tenant_provisioning.py  tenant_quotas.py  tenant_security.py  tenant_utils.py  test_tenant_isolation.py  tool_security.py  utils.py
koreshield/src/koreshield/api/: alerts.py  analytics.py  auth.py  billing.py  management.py  rbac.py  reports.py  rules.py  teams.py  websocket.py
koreshield/src/koreshield/crm_templates/: README.md  __init__.py  attack_patterns.py  integration_tests.py
koreshield/src/koreshield/models/: __init__.py  alert_channel.py  alert_rule.py  api_key.py  billing.py  custom_rule.py  rag_scan.py  report.py  request_log.py  team.py  user.py
koreshield/src/providers/: anthropic.py  azure_openai.py  base.py  cache_manager.py  client_pool.py  deepseek.py  gemini.py  rate_limiting.py
koreshield/tests/: __init__.py  conftest.py  test_account_lifecycle.py  test_auth.py  test_benchmark_fixtures.py  test_contract.py  test_detector.py  test_durability.py  test_health_monitor.py  test_list_manager.py  test_management_config.py  test_management_password_reset.py  test_monitoring.py  test_operational_services.py  test_policy.py  test_policy_rbac.py  test_provider_manager.py  test_providers.py  test_proxy.py  test_rag_detector.py  test_rag_proxy.py  test_rate_limiting.py  test_rule_engine.py  test_sanitizer.py  test_telemetry.py  test_tool_security.py  test_websocket_auth.py
koreshield/tests/fixtures/: evasive_prompt_benchmark.json  rag_poisoning_benchmark.json
(+1244 files in other folders)
