[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koreshield"
version = "0.2.0"
description = "Python SDK for KoreShield LLM Security Platform"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    {name = "KoreShield Team", email = "team@koreshield.com"},
]
maintainers = [
    {name = "KoreShield Team", email = "team@koreshield.com"},
]
keywords = ["llm", "security", "ai", "safety", "prompt-injection", "koreshield"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "aiofiles>=0.23.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.0.350",
    "langchain-core>=0.1.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
flask = [
    "flask>=2.3.0",
    "werkzeug>=2.3.0",
]
django = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
]
all = [
    "langchain>=0.0.350",
    "langchain-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "flask>=2.3.0",
    "werkzeug>=2.3.0",
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
]

[project.urls]
Homepage = "https://koreshield.com"
Documentation = "https://docs.koreshield.com"
Repository = "https://github.com/koreshield/koreshield.git"
Issues = "https://github.com/koreshield/koreshield/issues"
Changelog = "https://github.com/koreshield/koreshield/blob/main/koreshield-python-sdk/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
koreshield_sdk = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]  # assert false

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=koreshield_sdk",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]